# boardflow

./: .env.example  .gitignore  LICENSE  Makefile  PROJECT.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/design-mode/: SKILL.md
api/: __init__.py  app.py  dependencies.py  main.py  routes.py  schemas.py
db/: alembic.ini  env.py  models.py
db/versions/: 20260306_add_idf_stats.py  8b21be6d2927_initial_bgg_schema.py
docs/: API_USAGE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_STATUS.md  INGESTION.md  LLM_CONFIGURATION.md  REPOSITORY_USAGE.md  SERVICE_USAGE.md
frontend/: .env.example  FRONTEND_GUIDE.md  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ComparisonBar.tsx  ComparisonModal.tsx  ExampleQueries.tsx  FilterBar.tsx  GameCard.tsx  GameDetailModal.tsx  GameGrid.tsx  QueryInput.tsx  ResultsHeader.tsx
frontend/src/hooks/: useRecommendations.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: filters.ts  formatting.ts
ingestion/: client.py  csv_seed.py  load.py  transform.py
repositories/: __init__.py  base.py  game_repository.py
schemas/: __init__.py  game_schemas.py
scripts/: compute_idf_weights.py  run_ingestion.py  test_api.py  verify_idf_implementation.py
services/: __init__.py  idf_service.py  llm_service.py  recommendation_service.py
